--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
             <version>33.0.0-jre</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+            <version>2.4.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
