--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 # 应用服务 WEB 访问端口
 server.port=8080
 
+minio.endpoint=http://10.11.0.136:9000
+minio.accessKey=BhypLivZDdK7I5SqexYK
+minio.secretKey=WxL6BAFCz5Ds7BW7BKGLGEFxeJpIQ6AFAxIF7NVn
+minio.bucket=demo
