--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,21 @@ knife4j.openapi.group.test1.api-rule-resources[0]=com.csfrez.tool.web
 knife4j.openapi.group.test2.group-name=分组名称2
 knife4j.openapi.group.test2.api-rule=package
 knife4j.openapi.group.test2.api-rule-resources[0]=com.csfrez.tool.demos.web
+
+
+concept.download.source.cache.enabled=true
+concept.download.source.cache.path=/source_cache
+concept.download.source.cache.delete=false
+#concept.download.compress.format=zip
+#concept.download.compress.password=123456
+#concept.download.compress.cache.enabled=true
+#concept.download.compress.cache.path=/compress_cache
+#concept.download.compress.cache.delete=false
+#concept.download.response.headers.header1=1
+#concept.download.response.headers.header2=2
+concept.download.logger.enabled=true
+concept.download.logger.standard.enabled=true
+concept.download.logger.progress.enabled=true
+concept.download.logger.progress.duration=500
+concept.download.logger.progress.percentage=true
+concept.download.logger.time-spent.enabled=true
