文件批量上传，水印处理

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 # 应用服务 WEB 访问端口
 server.port=8080
 
+# 设置文件上传的最大限制
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=100MB
+
+
+
 minio.endpoint=http://10.11.0.136:9000
 minio.accessKey=BhypLivZDdK7I5SqexYK
 minio.secretKey=WxL6BAFCz5Ds7BW7BKGLGEFxeJpIQ6AFAxIF7NVn
@@ -42,3 +48,5 @@ concept.download.logger.progress.enabled=true
 concept.download.logger.progress.duration=500
 concept.download.logger.progress.percentage=true
 concept.download.logger.time-spent.enabled=true
+
+
