--- a/pom.xml
+++ b/pom.xml
@@ -92,13 +92,13 @@
             <version>2.0.30</version>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>com.groupdocs</groupId>
             <artifactId>groupdocs-conversion</artifactId>
             <version>22.12</version>
-        </dependency>
+        </dependency>-->
 
-        <dependency>
+        <!--<dependency>
             <groupId>org.docx4j</groupId>
             <artifactId>docx4j-JAXB-Internal</artifactId>
             <version>8.0.0</version>
@@ -120,7 +120,7 @@
             <groupId>org.docx4j</groupId>
             <artifactId>docx4j-export-fo</artifactId>
             <version>8.0.0</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -139,6 +139,13 @@
             <groupId>com.github.linyuzai</groupId>
             <artifactId>concept-download-spring-boot-starter</artifactId>
             <version>2.0.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/net.coobird/thumbnailator -->
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>0.4.20</version>
         </dependency>
 
 
