响应数据封装统一封装

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,4 +49,11 @@ concept.download.logger.progress.duration=500
 concept.download.logger.progress.percentage=true
 concept.download.logger.time-spent.enabled=true
 
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
+graceful-response.response-style=1
+graceful-response.print-exception-in-global-advice=true
+graceful-response.origin-exception-using-detail-message=true
+
+
 
