--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,12 @@
             <version>0.4.20</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.feiniaojin</groupId>
+            <artifactId>graceful-response</artifactId>
+            <version>3.3.1-boot2</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
