--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,31 @@
             <version>2.16.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/javax.sip/jain-sip-ri -->
+        <dependency>
+            <groupId>javax.sip</groupId>
+            <artifactId>jain-sip-ri</artifactId>
+            <version>1.3.0-91</version>
+        </dependency>
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
+
+        <!--<dependency>
+            <groupId>javax.sip</groupId>
+            <artifactId>jain-sip-api</artifactId>
+            <version>1.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>gov.nist</groupId>
+            <artifactId>jain-sip-ri</artifactId>
+            <version>1.2.278</version>
+        </dependency>-->
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
